@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/07/10 16:43:55 $
+                     $Date: 2005/07/10 18:06:58 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which may be  usefull in everyday life  ;) There are
@@ -69,6 +69,10 @@ At the moment the collection include:
 
  * mpd-state-wrapper.sh - a small shell script making mpd-state
    behaving like Avuton Olrich's state-utils.
+
+ * null - a C program (null.c) and a shell script (null.sh) which
+   distard standard input.  It is ment for people who thnik that
+   '>/dev/null' is too long to type every time :)
 
  * quotes.txt - a collection of quotations, some are in Polish.
 
