@@ -1,8 +1,8 @@
 #!/usr/bin/perl -lw
 ##
 ## Checks mboxes for unread mail
-## $Id: checkmail,v 1.1 2005/07/10 16:43:55 mina86 Exp $
-## Copyright (c) 2005 by Stanislaw Kelkot (dozzie/at/irc.pl)
+## $Id: checkmail,v 1.2 2005/07/10 18:06:58 mina86 Exp $
+## Copyright (c) 2005 by Stanislaw Klekot (dozzie/at/irc.pl)
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
