@@ -1,8 +1,8 @@
 #!/bin/bash
 ##
 ## Downlaods MKS-Vir virus database.
-## $Id: get_mks_vir_bases,v 1.1 2005/07/10 16:43:55 mina86 Exp $
-## Copyright (c) 2005 by Stanislaw Kelkot (dozzie/at/irc.pl)
+## $Id: get_mks_vir_bases,v 1.2 2005/07/10 18:06:59 mina86 Exp $
+## Copyright (c) 2005 by Stanislaw Klekot (dozzie/at/irc.pl)
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
